CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )
project (easykf) 

set(PACKAGE_VERSION "2.3")

# Adds the path to the FindGSL.cmake
SET( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules"
                       "${CMAKE_MODULE_PATH}" )

# Get required and optional library
FIND_PACKAGE( GSL REQUIRED )

include_directories( ${GSL_INCLUDE_DIR})
link_directories(${GSL_LINK_DIRECTORIES})

add_subdirectory (src)
add_subdirectory (examples)
#add_subdirectory (doc)

# Let's configure the pkgconfig file 
configure_file(${easykf_SOURCE_DIR}/easykf.pc.in ${easykf_BINARY_DIR}/easykf.pc @ONLY)
install(FILES ${easykf_BINARY_DIR}/easykf.pc
	DESTINATION lib/pkgconfig
)

set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "C++ Library for Kalman filtering")
set(CPACK_PACKAGE_VENDOR "Jeremy Fix")
set(CPACK_PACKAGE_VERSION ${PACKAGE_VERSION})
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")

SET(CPACK_RPM_PACKAGE_SUMMARY 	${CPACK_PACKAGE_DESCRIPTION_SUMMARY})
SET(CPACK_RPM_PACKAGE_NAME 	${CMAKE_PROJECT_NAME})
SET(CPACK_RPM_PACKAGE_VERSION  ${CPACK_PACKAGE_VERSION})
SET(CPACK_RPM_PACKAGE_RELEASE 	1)
SET(CPACK_RPM_PACKAGE_LICENSE 	"New BSD")
SET(CPACK_RPM_PACKAGE_GROUP 	"Development/Libraries")
SET(CPACK_RPM_PACKAGE_VENDOR 	${CPACK_PACKAGE_VENDOR})
SET(CPACK_RPM_PACKAGE_DESCRIPTION "C++ Library for Kalman Filtering")
set(CPACK_RPM_PACKAGE_REQUIRES "gsl >= 1.14, cmake >= 2.8.4")

SET(CPACK_GENERATOR "RPM" "TGZ")
 
INCLUDE(CPack)
